test/errors/list/insert_index_error.np
l = [1]
l.insert(5, 2)
